--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Horarios UNSA</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto|Sen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
